# ai-python-story-gen

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/PRPs/plans/completed/: fastapi-postgres-user-auth.plan.md  langgraph-worker-postgres-checkpointer.plan.md  story-universe-and-stories.plan.md
.claude/PRPs/reports/: fastapi-postgres-user-auth-report.md  langgraph-worker-postgres-checkpointer-report.md  story-universe-and-stories-report.md
alembic/: env.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: auth.py  health.py  router.py  stories.py  story_universes.py  users.py
app/core/: config.py  database.py  exceptions.py  security.py
app/migrations/: env.py
app/migrations/versions/: 20260119_1400_9399e4104e38_user_migration.py  20260119_1841_e1f572f398b1_add_story_universes_and_stories_tables.py
app/models/: __init__.py  story.py  story_universe.py  user.py
app/repositories/: __init__.py  story.py  story_universe.py  user.py
app/schemas/: __init__.py  auth.py  story.py  story_universe.py  user.py
app/services/: __init__.py  auth.py  story.py  story_universe.py  user.py
tests/: __init__.py  conftest.py  test_auth.py  test_stories.py  test_story_universes.py  test_users.py
worker/: __init__.py  main.py
worker/core/: __init__.py  checkpointer.py  config.py
worker/graphs/: __init__.py  base.py  example_graph.py
